--- a/lib/hqmf-parser/2.0/.rubocop.yml
+++ b/lib/hqmf-parser/2.0/.rubocop.yml
@@ -2,7 +2,6 @@
 
 AllCops:
   DisplayCopNames: true
-  RunRailsCops: true
 
 Metrics/AbcSize:
   Max: 32
@@ -28,6 +27,9 @@ Metrics/MethodLength:
 
 Metrics/CyclomaticComplexity:
   Max: 10
+
+Rails:
+  Enabled: true
 
 # Avoid complex methods.
 Style/GuardClause:
