--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,22 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.5.1-node
+      - image: circleci/ruby:2.5.0
         environment:
           RAILS_ENV: test
-          HDS: true
-      - image: circleci/mongo:3
     steps:
       - checkout
+
+      - run:
+          name: Install and start MongoDB
+          command: |
+            sudo mkdir -p /data/db
+            sudo mkdir -p /data/log
+            wget http://downloads.mongodb.org/linux/mongodb-linux-x86_64-2.6.10.tgz && \
+            tar xvzf mongodb-linux-x86_64-2.6.10.tgz
+            sudo cp mongodb-linux-x86_64-2.6.10/bin/* /usr/local/bin
+            sudo mongod --fork --logpath /data/log/mongod.log
+
       - run: gem install bundler
       - run: sudo gem update --system
       - restore_cache:
@@ -16,9 +25,8 @@ jobs:
             - health-data-standards-{{ checksum "Gemfile.lock" }}
             - health-data-standards-
 
-      - run: bundle update json
-      - run: bundle install --path vendor/bundle --without staging doc
-      - run: sudo apt install postgresql-client
+      - run: bundle config --local path vendor/bundle
+      - run: bundle install --without staging doc
 
       - save_cache:
           key: health-data-standards-{{ checksum "Gemfile.lock" }}
